#34 fixed server not starting